<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            app:srcCompat="@android:drawable/alert_dark_frame" />
        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/phoneLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_date_created" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_row="2"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/emailLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_medium" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_row="3"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/streetLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:text="@string/label_dimensions" />

        <TextView
            android:id="@+id/streetTextView"
            android:layout_row="4"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </GridLayout>

</ScrollView>